--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
   <link href="css/bootstrap.css" rel="stylesheet" />
   <link href="css/coming-sssoon.css" rel="stylesheet" />
+  <link href="css/custom.css" rel="stylesheet" />
 
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/v4-shims.css">
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,11 +72,31 @@
     </video>
     <div class="cover black" data-color="black"></div>
     <div class="container">
-      <h1 class="logo ">Crocheting Soon</h1>
+      <h1 class="logo ">Crocheting &nbsp;Soon...</h1>
       <div class="content">
         <h4 class="motto">Crochet Patterns<br />Crochet Tutorials</h4>
-
+        <div class="socials">
+          <h4 class="subt">Meanwhile, check my works on:</h4>
+          <ul class="neng-socials">
+            <li>
+              <a href="https://instagram.com/nenguistic" target="_blank">
+                <i class="fa fa-instagram"></i> @nenguistic
+              </a>
+            </li>
+            <li>
+              <a href="https://youtube.com/NengCrochet05" target="_blank">
+                <i class="fa fa-youtube"></i> Neng Crochet
+              </a>
+            </li>
+            <li>
+              <a href="https://twitch.tv/neng" target="_blank">
+                <i class="fab fa-twitch"></i> neng0505
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
+
     </div>
   </div>
 </body>
