--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <source src="video/time.mp4" type="video/mp4"> Video not supported
     </video>
     <div class="cover black" data-color="black"></div>
-    <div class="container">
+    <div class="container center">
       <h1 class="logo ">Crocheting &nbsp;Soon...</h1>
       <div class="content">
         <h4 class="motto">Crochet Patterns<br />Crochet Tutorials</h4>
