--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <i class="fa fa-instagram"></i> @nenguistic
               </a>
             </li>
+
             <li>
               <a href="https://youtube.com/NengCrochet05" target="_blank">
                 <i class="fa fa-youtube"></i> Neng Crochet
@@ -91,6 +92,11 @@
             <li>
               <a href="https://twitch.tv/neng" target="_blank">
                 <i class="fab fa-twitch"></i> neng0505
+              </a>
+            </li>
+            <li>
+              <a href="https://pinterest.com/nenguistic" target="_blank">
+                <i class="fa fa-pinterest"></i> nenguistic
               </a>
             </li>
           </ul>
